
Miscellaneous
=============
 * Clean up of JUnit tests e.g. warnings (unused imports, non-static references to static 
   fields, etc.) have been tidied.
   
 * Spring XML files with examples config renamed to follow industry standard (lower case,
   hyphen separated).
   
 * Failure to load .openadaptor-spring.xml from classpath is no longer fatal (reduced to warning).   

=================================================
openadaptor3 production 3.4 Release Notes

See licence.txt for Licence information.
=================================================

Date: 31st January 2008
Author: openadaptor Core Team

openadaptor 3.4
=======

Summary
=======

This release focuses on improving the documentation, the migration (from 1.x)
and on further stabilisation. It comes with a number of bug fixes and a new 
component type - an enrichment processor.

Connectors
==========

New IPollingReadConnector - ThrottlingReadConnector allows for throttling
of calls of read connector it wraps. The new connector is similar to 
the LoopingPollingReadConnector except it operates on more fine-grained level,
adding time intervals in between individual calls for data by the underlying
reader, rather than treating all calls (until source data is exhausted) of the 
wrapped reader as one call.

The depricated PollingReadConnector has been deleted; all occurences need to be
replaced with either LoopingPollingReadConnector or CronnablePollingReadConnector.

|------------------------------------------------------------------------------|
|        OA 3.3                  |            OA 3.4                           |
|------------------------------------------------------------------------------|
|                                |                                             |
|PollingReadConnector            | either LoopingPollingReadConnector or       |
|         (deleted)              | CronnablePollingReadConnector depending on  |